# epistemic-bench

./: .gitignore  PROPOSAL.md  README.md  SPEC.md  epistemic-bench-proposal.docx  pyproject.toml
.github/workflows/: deploy-pages.yml  jekyll-gh-pages.yml
config/: models.example.yaml  run.example.yaml
itembank/: VERSIONS.md  manifest.yaml
itembank/private.example/: README.md  calibration.private.jsonl
itembank/public/: calibration.v1.jsonl  calibration.v1b.jsonl  clarity.v1.jsonl  creator_bias.v1.jsonl  framing.v1.jsonl  pedantic.v1.jsonl  sycophancy.v1.jsonl  thoroughness.v1.jsonl
itembank/schema/: item.schema.json
methodology/: calibration.md  clarity.md  creator_bias.md  framing.md  judge-validation.md  pedantic.md  rotation.md  sycophancy.md  thoroughness.md
scripts/: _pool_cb.py  _pool_clr.py  _pool_ped.py  _pool_thr.py  build_v1_100.py
src/epistemic_bench/: __init__.py  __main__.py  adapters.py  aggregate.py  cli.py  itembank.py  jsonlio.py  report.py  rotation.py  runner.py  site_build.py  types.py  validation.py
src/epistemic_bench/scoring/: __init__.py  base.py  calibration.py  clarity.py  creator_bias.py  framing.py  sycophancy.py
src/epistemic_bench/scoring/judge/: __init__.py  judge_client.py  pedantic.py  rubric.py  (+1 more)
tests/: _bootstrap.py  test_calibration.py  test_clarity.py  test_creator_bias.py  test_framing.py  test_itembank.py  test_pedantic.py  test_rotation.py  test_runner_expand.py  test_site_build.py  test_sycophancy.py  test_thoroughness.py  test_validation.py
validation/judge/: pedantic.sample.jsonl  thoroughness.sample.jsonl
