[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-bench"
version = "0.1.0"
description = "Open benchmark for epistemic virtues of frontier LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
google = ["google-generativeai>=0.8"]
dev = ["pytest>=8"]

[project.scripts]
epb = "epistemic_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
